# entropix

./: .clang-format  <  CMakeLists.txt  README.md
app/: CMakeLists.txt
dependencies/: sdl3.cmake
include/cells/: BehaviorLiquid.hpp  Cell.hpp  CellAbstractFall.hpp  CellConcrete.hpp  CellSand.hpp  CellVoid.hpp  CellWater.hpp  Cells.hpp
include/core/: Cell.hpp  CellRegistry.hpp  Game.hpp  GameConst.hpp  GameMode.hpp  GameState.hpp  InputManager.hpp  World.hpp
include/render/: Camera.hpp  Canva.hpp  GameUI.hpp  SdlGridRenderer.hpp  SmartGrid.hpp  TerminalRender.hpp
include/utils/: Coord.hpp
src/: CMakeLists.txt  main.cpp
src/cells/: BehaviorLiquid.cpp  Cell.cpp  CellAbstractFall.cpp  CellConcrete.cpp  CellSand.cpp  CellVoid.cpp  CellWater.cpp
src/core/: CellRegistry.cpp  Game.cpp  GameState.cpp  InputManager.cpp  World.cpp
src/render/: Camera.cpp  Canva.cpp  GameUI.cpp  SdlGridRenderer.cpp  TerminalRender.cpp
